--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,7 +5,7 @@ $large:             64em;   // 1024px
 $body-color:        #222;
 $black:             #000;
 $gray:              #666;
-$gray-light:        #999;
+$gray-light:        #767676;
 $white:             #fff;
 $link:              #15c;
 $link-visited:      $link;
